Render - destape de carta - ok

--- a/index.css
+++ b/index.css
@@ -12,18 +12,15 @@ body {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-gap: 30px;
-  /* height: 100vh; */
-  /* width: 90%; */
+
   margin: auto;
   margin-top: 30px;
   max-width: 70%;
-  /* height: 100vh; */
+
   border-radius: 7px;
   padding: 15px;
   justify-items: center;
-  /* border: solid #aaa; */
-  /* border-width: 1px; */
-  /* box-shadow: 0px 1px 2px black; */
+
   box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.2);
 }
 
@@ -36,10 +33,6 @@ body {
   position: relative;
 }
 
-/* .card-poke:hover {
-    box-shadow: inset 0px 0px 7px rgba(0, 0, 0, 0.2);
-  } */
-
 .card-poke-img {
   display: flex;
   justify-content: center;
@@ -48,13 +41,10 @@ body {
 .poke-img {
   width: 100%;
   max-width: 50%;
-  /* height: 100%; */
-  /* position: relative; */
 }
 /* Estilos del Nav y boton */
 
 .buttons-container {
-  /* border: solid 1px rgb(); */
   max-width: 900px;
   margin: auto;
   margin-top: 30px;
@@ -74,28 +64,27 @@ body {
   font-size: 15px;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
   color: rgb(43, 43, 43);
-  /* color: white; */
   background-color: rgba(248, 248, 55, 0.856);
 }
 
 .dorso-card {
   width: 100%;
   height: 100%;
-  background-color: blue;
+  background-color: rgb(207, 207, 223);
   position: absolute;
-  /* translate: -50%; */
-  /* opacity: 0.7; */
-  /* z-index: -1; */
-  /* transition: 0.5; */
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .taping {
   transition: 1s;
   width: 0%;
+  font-size: 0px;
 }
-/* .mostrar { */
-/* z-index: 1; */
-/* transition: 0.5; */
-/* } */
-/* .button-poke:hover {
-} */
+
+.dorso-card-title {
+  font-family: "Inconsolata", monospace;
+  color: rgb(26, 25, 25);
+}
